refactor Configuration